Deiseño de formularios

--- a/SistemaInventario/Views/Autos/MostrarAutos.cshtml
+++ b/SistemaInventario/Views/Autos/MostrarAutos.cshtml
@@ -17,7 +17,7 @@
         {
             <div class="card">
                 <img src="~/Content/img_cars/@car.imagen" />
-                <h4>@car.NombreMarca @car.color ($@car.precio)</h4>
+                <h4>@car.NombreMarca @car.color</h4>
                 <p>Modelo: @car.modelo  Motor: @car.motor</p>
                 <p>@car.descripcion</p>
                 <label>
@@ -77,7 +77,6 @@
                                 <td>@car.NombreMarca</td>
                                 <td>@car.modelo</td>
                                 <td>@car.placa</td>
-                                <td><b>$</b>@car.precio</td>
 
                                 <td>@car.imagen</td>
                                 <td>@car.color</td>
