--- a/SistemaInventario/Views/Marcas/AgregarOEditarMarcas.cshtml
+++ b/SistemaInventario/Views/Marcas/AgregarOEditarMarcas.cshtml
@@ -3,26 +3,17 @@
 @{
     ViewBag.Title = "AgregarOEditarMarcas";
 }
+<link href="~/Content/Diseños/formularios.css" rel="stylesheet" />
 
-<div class="container-fluid">
-    <div class="col-md-12">
         <center><h1>Agregar Marca</h1></center>
-        <br />
         
         @using (Html.BeginForm())
             {
                 @Html.HiddenFor(x => x.idMarca);
-    <div class="col-md-6">
-        <div class="form-group">
-            <label class="form-label">Nombre Marca</label>
+    <div class="formulario marca">
+            <label>Nombre Marca</label>
             @Html.TextBoxFor(x => x.marca, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(x => x.marca, null, htmlAttributes: new { @class = "text-danger"})
-        </div>
-
-        <div class="form-group">
-            <input type="submit" class="btn btn-success" value="Guardar"/>
-        </div>
+            <input type="submit" value="Guardar"/>
     </div>
             }
-    </div>
-</div>
