--- a/SistemaInventario/Views/Compras/MostrarCompras.cshtml
+++ b/SistemaInventario/Views/Compras/MostrarCompras.cshtml
@@ -13,7 +13,7 @@
                 </center>
                 <br />
                 <button class="btn btn-success"
-                        onclick="window.location.href='AgregarOEditarCompras'">
+                        onclick="window.location.href='AgregarOEditarCompras'"><i class="fas fa-plus"></i>
                     Agregar A Inventario
                 </button>
                 <br />
