--- a/SistemaInventario/Views/Shared/_Layout.cshtml
+++ b/SistemaInventario/Views/Shared/_Layout.cshtml
@@ -28,8 +28,7 @@
             <div class="row">
                 <div class="col-12">
                     <nav class="navbar navbar-expand-md navbar-light">
-
-                        <a class="nav-link navbar-brand" href="https://localhost:44366/" target="_blank">@*<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/logo.svg" alt="">*@Inicio</a>
+                        <a class="nav-link navbar-brand" href="https://localhost:44366/" target="_blank">@*<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/logo.svg" alt="">*@<i style="font-size: 30px" class="fas fa-home-alt"></i></a>
 
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -69,7 +68,9 @@
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                         <a class="nav-link" href="https://localhost:44366/Usuarios/MostrarUsuarios">Usuario</a>
                                     </li>
-
+                                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                                         <a class="nav-link" href="https://localhost:44366/Carrito/MostrarCarrito"><i style="font-size:19px" class="fas fa-shopping-cart"></i></a>
+                                    </li>
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                         <a class="nav-link" href="https://localhost:44366/Home/LogOut">Salir</a>
                                     </li>
@@ -101,8 +102,7 @@
             <!-- Left -->
             <!-- Right -->
             <div class="justify-content-center">
-                <a href="" class="me-4 text-reset">
-                    <i class="fab fa-facebook fa-2x"></i>
+                <a href=""><i class="fab fa-facebook fa-2x"></i>
                 </a>
                 <a href="" class="me-4 text-reset">
                     <i class="fab fa-twitter fa-2x"></i>
