--- a/SistemaInventario/Content/Diseños/Navbar.css
+++ b/SistemaInventario/Content/Diseños/Navbar.css
@@ -21,7 +21,18 @@
     .navbar-toggler:focus {
         outline: none;
     }
-.navbar-light .navbar-toggler-icon {
+.nav-link {
+    font-size: 18px;
+}
+
+    .nav-link i {
+        color: #e5bfff;
+    }
+
+        .nav-link i:hover {
+            color: white;
+        }
+    .navbar-light .navbar-toggler-icon {
     width: 24px;
     height: 17px;
     background-image: none;
@@ -29,6 +40,7 @@
     border-bottom: 1px solid #e5bfff;
     transition: all 300ms linear;
 }
+
     .navbar-light .navbar-toggler-icon:after,
     .navbar-light .navbar-toggler-icon:before {
         width: 24px;
@@ -41,6 +53,7 @@
         z-index: 2;
         transition: all 300ms linear;
     }
+
     .navbar-light .navbar-toggler-icon:after {
         top: 8px;
     }
@@ -55,7 +68,7 @@
 }
 .nav-link {
     color: #e5bfff !important;
-    font-weight: 500;
+    font-weight: 700;
     transition: all 200ms linear;
 }
     .nav-link:hover {
