--- a/SistemaInventario/Content/Diseños/formularios.css
+++ b/SistemaInventario/Content/Diseños/formularios.css
@@ -13,23 +13,32 @@
     align-items: center;
     border-radius: 10px;
     padding: 10px;
+    box-shadow: 8px 8px 1px #893dc2;
 }
+
+    .formulario h3 {
+        background-color: #893dc2;
+        width: 100%;
+        border-radius: 20px 0px 20px 0px;
+        color: black;
+    }
+
     .formulario.marca {
         width: 260px;
         height: 280px;
     }
 
-    .formulario.proveedores , .formulario.cliente{
+    .formulario.proveedores, .formulario.cliente{
         width: 300px !important;
-        height: 375px;
+        height: 500px !important;
     }
     .formulario.usuario {
         width: 400px;
     }
-
-    .formulario:hover {
-        box-shadow: 0 12px 16px rgb(22 21 21);
+    .formulario.auto{
+        width: 400px;
     }
+
     .formulario.marca input{
         width: 200px;
     }
@@ -63,3 +72,29 @@
 .formulario input[type="submit"]:hover {
     border: 1px solid rgb(255 255 255);
 }
+
+.inputs {
+    margin: 0px auto;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+}
+    .inputs .marca {
+        margin-right: 30px;
+    }
+
+    .inputs .modelo {
+        width: 130px;
+    }
+    .inputs .fecha{
+        margin-left: -12px;
+    }
+    .inputs .motor {
+        width: 130px;
+        margin-right: 10px;
+    }
+    .inputs .fecha input{
+        width: 142px;
+        margin-left: 5px;
+    }
+    
