--- a/SistemaInventario/Views/Autos/AgregarOEditarAutos.cshtml
+++ b/SistemaInventario/Views/Autos/AgregarOEditarAutos.cshtml
@@ -3,76 +3,61 @@
 @{
     ViewBag.Title = "AgregarOEditarAutos";
 }
-<br />
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-4">
-        </div>
-        <div class="col-md-8">
-            <h2>Agregar Proveedores</h2>
-            @using (Html.BeginForm())
-            {
-                @Html.HiddenFor(x => x.idAuto)
-        <div class="col-md-6">
+<link href="~/Content/Diseños/formularios.css" rel="stylesheet" />
 
-            <div class="form-group">
-                <label>Marca: </label>
+@using (Html.BeginForm())
+{
+    @Html.HiddenFor(x => x.idAuto)
+<div class="formulario auto">
+    <h3>Agregar Autos</h3>
+    <div class="inputs marca-model">
+        <div class="marca">
+            <label>
+                Marca:
                 @Html.DropDownListFor(x => x.fk_marca, (IEnumerable<SelectListItem>)ViewBag.listaMarcas, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(x => x.fk_marca, null, new { @class = "text-danger" })
-            </div>
-            <div class="form-group">
-                <label>Modelo: </label>
+            </label>
+        </div>
+        <div class="modelo">
+            <label>
+                Modelo:
                 @Html.TextBoxFor(x => x.modelo, new { @class = "form-control" })
                 @Html.ValidationMessageFor(x => x.modelo, null, new { @class = "text-danger" })
-            </div>
-            <div class="form-group">
-                <label>Placa: </label>
-                @Html.TextBoxFor(x => x.placa, new { @class = "form-control" })
-                @Html.ValidationMessageFor(x => x.placa, null, new { @class = "text-danger" })
-            </div>
-            <div class="form-group">
-                <label>Precio: </label>
-                @Html.TextBoxFor(x => x.precio, new { @class = "form-control" })
-                @Html.ValidationMessageFor(x => x.precio, null, new { @class = "text-danger" })
-            </div>
-
-            <div class="form-group">
-                <label>Imagen: </label>
-                @Html.TextBoxFor(x => x.imagen, new { @class = "form-control" })
-                @Html.ValidationMessageFor(x => x.imagen, null, new { @class = "text-danger" })
-            </div>
-
-            <div class="form-group">
-                <label>Color: </label>
-                @Html.TextBoxFor(x => x.color, new { @class = "form-control" })
-                @Html.ValidationMessageFor(x => x.color, null, new { @class = "text-danger" })
-            </div>
-
-            <div class="form-group">
-                <label>Motor: </label>
-                @Html.TextBoxFor(x => x.motor, new { @class = "form-control" })
-                @Html.ValidationMessageFor(x => x.motor, null, new { @class = "text-danger" })
-            </div>
-
-            <div class="form-group">
-                <label>Descripción: </label>
-                @Html.TextBoxFor(x => x.descripcion, new { @class = "form-control" })
-                @Html.ValidationMessageFor(x => x.descripcion, null, new { @class = "text-danger" })
-            </div>
-
-            <div class="form-group">
-                <label>Fecha: </label>
-                @Html.TextBoxFor(x => x.fechaLanzamiento, new { @class = "form-control" })
-                @Html.ValidationMessageFor(x => x.fechaLanzamiento, null, new { @class = "text-danger" })
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-success">Guardar</button>
-            </div>
-        </div>
-            }
-        </div>
-        <div class="col-md-2">
+            </label>
         </div>
     </div>
-</div>
 
+    <label>Placa: </label>
+    @Html.TextBoxFor(x => x.placa, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.placa, null, new { @class = "text-danger" })
+    <label>Imagen: </label>
+    @Html.TextBoxFor(x => x.imagen, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.imagen, null, new { @class = "text-danger" })
+    <label>Color: </label>
+    @Html.TextBoxFor(x => x.color, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.color, null, new { @class = "text-danger" })
+    <div class="inputs motor-fecha">
+        <div class="motor">
+            <label>
+                Motor:
+                @Html.TextBoxFor(x => x.motor, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.motor, null, new { @class = "text-danger" })
+            </label>
+        </div>
+        <div class="fecha">
+            <label>
+                Fecha:
+                @Html.TextBoxFor(x => x.fechaLanzamiento, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.fechaLanzamiento, null, new { @class = "text-danger" })
+            </label>
+        </div>
+    </div>
+
+
+    <label>Descripción: </label>
+    @Html.TextBoxFor(x => x.descripcion, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.descripcion, null, new { @class = "text-danger" })
+
+    <input type="submit" value="Registrar" />
+</div>
+            }
