--- a/SistemaInventario/Views/Inventario/MostrarInventario.cshtml
+++ b/SistemaInventario/Views/Inventario/MostrarInventario.cshtml
@@ -4,8 +4,7 @@
 @{
     ViewBag.Title = "MostrarAutos";
 }
-
-<div class="container">
+<div class="container"> 
     <div class="row">
         <div class="col-md-12">
             <center><h1>Listado de Inventario</h1></center>
@@ -26,6 +25,7 @@
                     {
                         foreach (var car in Model)
                         {
+
                             <tr>
                                 <td>@car.MarcaAuto</td>
                                 <td>@car.ModeloAuto</td>
@@ -39,81 +39,81 @@
                                     </button>
                                 </td>
                             </tr>
+
+
                         }
+
                     }
                 </tbody>
             </table>
-
-
-
-            <div class="row">
-                <div class="col-md-6">
-                    <center>
-                        <h1>Listado de productos</h1>
-                    </center>
-                    <br />
-
-                    <br />
-                    <table class="table table-bordered table-striped">
-                        <tr>
-                            <td>ID</td>
-                            <td>Marca</td>
-                            <td>Modelo</td>
-                            <td>Cantidad</td>
-                            <td>Precio</td>
-                            <td>Total</td>
-                            <td>Sacar de la Lista</td>
-                        </tr>
-
-                        @if (Model.Count > 0)
-                        {
-                            foreach (var auto in AutosAVender.listaAutosAVender)
-                            {
-                                <tr>
-                                    <td>@auto.Id</td>
-                                    <td>@auto.Marca</td>
-                                    <td>@auto.Modelo</td>
-                                    <td>@auto.Cantidad</td>
-                                    <td>$ @auto.Precio</td>
-                                    <td>$ @auto.SubTotal</td>
-                                    <td>
-
-                                        <button class="btn btn-danger"
-                                                onclick="window.location.href='/Vender/EliminarElementoDeLaLista?id='+@auto.Id">
-                                            Quitar
-                                        </button>
-
-                                    </td>
-                                </tr>
-
-                            }
-
-                        }
-                    </table>
-
-                    <h4 style="color: white">Total: $ @AutosAVender.TotalAPagar</h4>
-
-                    <button class="btn btn-primary" id="BtnRealizarVenta"
-                            onclick="window.location.href = '/Vender/Vender'">
-                        Realizar Venta
-                    </button>
-
-                    <button class="btn btn-success" style="margin-top: 10px"
-                            onclick="window.location.href = '/Ventas/MostrarVentas'">
-                        Ver Ventas
-                    </button>
-                </div>
-            </div>
-
-
-
-
-
-
-
         </div>
     </div>
 </div>
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <center>
+                <h1>Listado de productos</h1>
+            </center>
+            <br />
+
+            <br />
+            <table class="table table-bordered table-striped">
+                <tr>
+                    <td>ID</td>
+                    <td>Marca</td>
+                    <td>Modelo</td>
+                    <td>Cantidad</td>
+                    <td>Precio</td>
+                    <td>Total</td>
+                    <td>Sacar de la Lista</td>
+                </tr>
+
+                @if (Model.Count > 0)
+                {
+                    foreach (var auto in AutosAVender.listaAutosAVender)
+                    {
+
+
+                        <tr>
+                            <td>@auto.Id</td>
+                            <td>@auto.Marca</td>
+                            <td>@auto.Modelo</td>
+                            <td>@auto.Cantidad</td>
+                            <td>$ @auto.Precio</td>
+                            <td>$ @auto.SubTotal</td>
+                            <td>
+
+                                <button class="btn btn-danger"
+                                        onclick="window.location.href='/Vender/EliminarElementoDeLaLista?id='+@auto.Id">
+                                    Quitar
+                                </button>
+
+                            </td>
+                        </tr>
+
+                    }
+
+                }
+            </table>
+
+            <h4 style="color: white">Total: $ @AutosAVender.TotalAPagar</h4>
+
+            <button class="btn btn-primary" id="BtnRealizarVenta"
+                    onclick="window.location.href = '/Vender/Vender'">
+                comprar
+            </button>
+
+            <button class="btn btn-success" style="margin-top: 10px"
+                    onclick="window.location.href = '/Ventas/MostrarVentas'">
+                Ver Ventas
+            </button>
+        </div>
+    </div>
+</div>
+
 
 @if (!AutosAVender.listaAutosAVender.Any())
 {
