--- a/SistemaInventario/Views/Marcas/MostrarMarcas.cshtml
+++ b/SistemaInventario/Views/Marcas/MostrarMarcas.cshtml
@@ -28,7 +28,7 @@
                                 <td>@mar.idMarca</td>
                                 <td>@mar.marca</td>
                                 <td width="20">
-                                    <button class="btn btn-info" onclick="window.location.href='/Marcas/AgregarOEditarMarcas?idMarca=' +@mar.idMarca"><i class="fas fa-pensil-alt"></i> Editar</button>
+                                    <button class="btn btn-info" onclick="window.location.href='/Marcas/AgregarOEditarMarcas?idMarca=' +@mar.idMarca"><i class="fas fa-pencil-alt"></i> Editar</button>
                                 </td>
                                 <td width="20">
                                     <button class="btn btn-danger" onclick="window.location.href='/Marcas/EliminarMarcas?id=' +@mar.idMarca"><i class="fas fa-trash-alt"></i> Eliminar</button>
