--- a/SistemaInventario/Content/Diseños/Login.css
+++ b/SistemaInventario/Content/Diseños/Login.css
@@ -2,36 +2,37 @@
     padding-top: 50px;
 }
 
-.login{
-    width: 300px;
-    height: 330px;
+.login {
+    width: 280px;
+    height: 300px;
     background-color: #1e1732;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-bottom: 7px solid rgb(209, 42, 159);
-    border-left: 7px solid rgb(209, 42, 159);
+    border-bottom: 7px solid #ae61e2;
+    border-left: 7px solid #ae61e2;
     border-radius: 10px;
 }
     .login:hover {
-        transition: translateY(-15px);
+        /*transition: translateY(-15px);*/
         box-shadow: 0 12px 16px rgb(22 21 21);
     }
     .login p {
         color: rgb(209, 42, 159);
     }
-    
+
     .login input {
         padding: 7px 10px 7px 10px;
         margin: 10px 20px 10px 20px;
         border-radius: 5px;
+        background-color: #e5bfff;
     }
 
         .login input[type="submit"] {
-            background-color: rgb(209, 42, 159);
-            border: 1px solid rgb(209, 42, 159);
+            background-color: #ae61e2;
+            border: 1px solid #ae61e2;
             width: 100px;
         }
 
