--- a/SistemaInventario/Content/Diseños/Site.css
+++ b/SistemaInventario/Content/Diseños/Site.css
@@ -12,9 +12,18 @@ button {
 }
 
 /* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+body {
+    padding-top: 80px;
+    padding-bottom: 80px;
+    width: 100%;
+    height: 100%;
+    font-family: sans-serif;
+    letter-spacing: 0.03cm;
+    line-height: 1.6;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: linear-gradient(120deg, white 70%, #e5bfff 30%);
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
