--- a/SistemaInventario/Content/Diseños/formularios.css
+++ b/SistemaInventario/Content/Diseños/formularios.css
@@ -38,6 +38,10 @@
     .formulario.auto{
         width: 400px;
     }
+    .formulario.auto input, .marca select{
+        height: 30px;
+        margin-top: -3px;
+    }
 
     .formulario.marca input{
         width: 200px;
@@ -65,7 +69,7 @@
         width: 90px;
         margin-top: 15px;
     }
-    .formulario.usuario input[type="submit"] {
+    .formulario.usuario input[type="submit"], .formulario.auto input[type="submit"] {
         margin-bottom: 10px;
     }
 
@@ -81,8 +85,9 @@
 }
     .inputs .marca {
         margin-right: 30px;
+       
     }
-
+   
     .inputs .modelo {
         width: 130px;
     }
