--- a/SistemaInventario/Views/Inventario/MostrarInventario.cshtml
+++ b/SistemaInventario/Views/Inventario/MostrarInventario.cshtml
@@ -1,23 +1,94 @@
 ﻿@using DAL.Models
+@using DAL.Seguridad
 @using BAL.ProductoParaVender;
+
+@{
+    var permisos = false;
+}
+@if (Session["UserId"] != null)
+{
+
+    var id = Session["UserId"];
+    var idStr = id.ToString();
+    var idInt = int.Parse(idStr);
+    permisos = PermisosPorRol.IsAdmin(idInt);
+}
 @model List<tabInventario>
 @{
     ViewBag.Title = "MostrarAutos";
 }
-<div class="container"> 
+<link href="~/Content/Diseños/tarjetas.css" rel="stylesheet" />
+<center><h1>Listado de Autos</h1></center>
+<br />
+@if (permisos == true)
+{
+    <center>
+        <button class="btn btn-info" onclick="mostrarTarjeta()" id="btnTarjeta">Ver en tarjetas</button>
+        <button class="btn btn-info" onclick="mostrarTabla()" id="btnTabla">Ver en tabla</button>
+    </center>
+
+    <div class="container">
+        <button style="margin-left: 20px" class="btn agregarBtn" onclick="window.location.href='/Inventario/AgregarOEditarAutos'"><i class="fas fa-plus"></i> Agregar Auto</button>
+    </div>
+}
+<div class="containerCards" id="tarjetas">
+    @if (Model != null)
+    {
+        foreach (var car in Model)
+        {
+    <div class="card">
+        <img src="~/Content/img_cars/@car.Image" />
+        <h4>@car.MarcaAuto @car.precio</h4>
+        <p>Modelo: @car.ModeloAuto Motor: @car.tabAutos.motor</p>
+        <p>@car.tabAutos.descripcion</p>
+        @if (permisos == true)
+        {
+            <label>
+                <button class="btn btn-info" onclick="window.location.href='/Inventario/AgregarOEditarAutos?id=' +@car.tabAutos.idAuto"><i class="fas fa-pencil-alt"></i> Editar</button>
+                <button class="btn btn-danger" onclick="window.location.href='/Inventario/EliminarAutos?id=' +@car.tabAutos.idAuto"><i class="fas fa-trash-alt"></i> Eliminar</button>
+            </label>
+        }
+        @if (permisos == false)
+        {
+            <button class="btn btn-info" onclick="window.location.href='/Vender/SeleccionarProducto?id='+@car.fk_auto">Añadir al carrito</button>
+        }
+    </div>
+        }
+    }
+</div>
+<script type="text/javascript">
+
+    function mostrarTabla() {
+        var tabla = document.getElementById("tabla");
+        var tarjeta = document.getElementById("tarjetas");
+        tabla.style.display = "block";
+        tarjeta.style.display = "none";
+    }
+
+    function mostrarTarjeta() {
+        var tabla = document.getElementById("tabla");
+        var tarjeta = document.getElementById("tarjetas");
+        tabla.style.display = "none";
+        tarjeta.style.display = "flex";
+    }
+
+</script>
+
+<div class="container" id="tabla" style="display: none">
     <div class="row">
         <div class="col-md-12">
-            <center><h1>Listado de Inventario</h1></center>
-            <br />
-
             <table class="table-hover table-striped ">
                 <thead>
                     <tr>
                         <th>Marca</th>
                         <th>Modelo</th>
-                        <th>Precio Venta</th>
-                        <th>Existencia</th>
-                        <th>Estado</th>
+                        <th>Placa</th>
+                        <th>Imagen</th>
+                        <th>Color</th>
+                        <th>Motor</th>
+                        <th>Descripción</th>
+                        <th>Fecha registro</th>
+                        <th colspan="2">Acciones</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -25,24 +96,24 @@
                     {
                         foreach (var car in Model)
                         {
-
                             <tr>
-                                <td>@car.MarcaAuto</td>
+                                <td>@car.tabAutos.NombreMarca</td>
                                 <td>@car.ModeloAuto</td>
-                                <td><b>$</b>@car.precio</td>
-                                <td>@car.existenciaProducto</td>
-                                <td>@car.estado</td>
-                                <td>
-                                    <button class="btn btn-danger"
-                                            onclick="window.location.href='/Vender/SeleccionarProducto?id='+@car.fk_auto">
-                                        Seleccionar
-                                    </button>
+                                <td>@car.tabAutos.placa</td>
+
+                                <td>@car.tabAutos.imagen</td>
+                                <td>@car.tabAutos.color</td>
+                                <td>@car.tabAutos.motor</td>
+                                <td>@car.tabAutos.descripcion</td>
+                                <td>@car.tabAutos.fechaRegistro</td>
+                                <td width="20">
+                                    <button class="btn btn-info" onclick="window.location.href='/Inventario/AgregarOEditarAutos?id=' +@car.tabAutos.idAuto"><i class="fas fa-pencil-alt"></i> Editar</button>
+                                </td>
+                                <td width="20">
+                                    <button class="btn btn-danger" onclick="window.location.href='/Inventario/EliminarAutos?id=' +@car.tabAutos.idAuto"><i class="fas fa-trash-alt"></i> Eliminar</button>
                                 </td>
                             </tr>
-
-
                         }
-
                     }
                 </tbody>
             </table>
@@ -50,69 +121,53 @@
     </div>
 </div>
 
+@if (permisos == false )
+{
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <center>
-                <h1>Listado de productos</h1>
-            </center>
-            <br />
+<table class="table table-bordered table-striped">
+    <tr>
+        <td>ID</td>
+        <td>Marca</td>
+        <td>Modelo</td>
+        <td>Cantidad</td>
+        <td>Precio</td>
+        <td>Total</td>
+        <td>Sacar de la Lista</td>
+    </tr>
 
-            <br />
-            <table class="table table-bordered table-striped">
-                <tr>
-                    <td>ID</td>
-                    <td>Marca</td>
-                    <td>Modelo</td>
-                    <td>Cantidad</td>
-                    <td>Precio</td>
-                    <td>Total</td>
-                    <td>Sacar de la Lista</td>
-                </tr>
+    @if (Model.Count > 0)
+    {
+        foreach (var auto in AutosAVender.listaAutosAVender)
+        {
+            <tr>
+                <td>@auto.Id</td>
+                <td>@auto.Marca</td>
+                <td>@auto.Modelo</td>
+                <td>@auto.Cantidad</td>
+                <td>$ @auto.Precio</td>
+                <td>$ @auto.SubTotal</td>
+                <td>
+                    <button class="btn btn-danger"
+                            onclick="window.location.href='/Vender/EliminarElementoDeLaLista?id='+@auto.Id">
+                        Quitar
+                    </button>
 
-                @if (Model.Count > 0)
-                {
-                    foreach (var auto in AutosAVender.listaAutosAVender)
-                    {
+                </td>
+            </tr>
 
+        }
 
-                        <tr>
-                            <td>@auto.Id</td>
-                            <td>@auto.Marca</td>
-                            <td>@auto.Modelo</td>
-                            <td>@auto.Cantidad</td>
-                            <td>$ @auto.Precio</td>
-                            <td>$ @auto.SubTotal</td>
-                            <td>
+    }
+</table>
 
-                                <button class="btn btn-danger"
-                                        onclick="window.location.href='/Vender/EliminarElementoDeLaLista?id='+@auto.Id">
-                                    Quitar
-                                </button>
-
-                            </td>
-                        </tr>
-
-                    }
-
-                }
-            </table>
-
-            <h4 style="color: white">Total: $ @AutosAVender.TotalAPagar</h4>
-
-            <button class="btn btn-primary" id="BtnRealizarVenta"
-                    onclick="window.location.href = '/Vender/Vender'">
-                comprar
-            </button>
-
-            <button class="btn btn-success" style="margin-top: 10px"
-                    onclick="window.location.href = '/Ventas/MostrarVentas'">
-                Ver Ventas
-            </button>
-        </div>
-    </div>
-</div>
+<h4 style="color: white">Total: $ @AutosAVender.TotalAPagar</h4><button class="btn btn-primary" id="BtnRealizarVenta"
+        onclick="window.location.href = '/Vender/Vender'">
+    comprar
+</button><button class="btn btn-success" style="margin-top: 10px"
+        onclick="window.location.href = '/Ventas/MostrarVentas'">
+    Ver Ventas
+</button>    
+ }
 
 
 @if (!AutosAVender.listaAutosAVender.Any())
@@ -123,5 +178,6 @@ else
 {
     <script>document.getElementById("BtnRealizarVenta").style.display = "block"</script>
 }
+
 
 
